[gd_scene load_steps=54 format=3 uid="uid://j060qriw6yvt"]

[ext_resource type="Texture2D" uid="uid://gx8j5vexegyx" path="res://assets/characters/player.png" id="1_5uwlx"]
[ext_resource type="Script" path="res://scenes/enemies/swordsman.gd" id="1_gbvb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2qug"]
size = Vector2(11, 12)

[sub_resource type="Animation" id="Animation_7oae5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_syj8w"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_yw7oj"]
resource_name = "idle_down"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5tvus"]
resource_name = "idle_left"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_71obo"]
resource_name = "idle_right"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_86eek"]
resource_name = "idle_up"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_f4npv"]
resource_name = "slash_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_lmw5u"]
resource_name = "slash_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_r2wk5"]
resource_name = "slash_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_sa5fr"]
resource_name = "walk_down"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_caaoe"]
resource_name = "walk_left"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_3lwyy"]
resource_name = "walk_right"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_iei0h"]
resource_name = "walk_up"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7, 0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnp46"]
_data = {
"RESET": SubResource("Animation_7oae5"),
"death": SubResource("Animation_syj8w"),
"idle_down": SubResource("Animation_yw7oj"),
"idle_left": SubResource("Animation_5tvus"),
"idle_right": SubResource("Animation_71obo"),
"idle_up": SubResource("Animation_86eek"),
"slash_down": SubResource("Animation_f4npv"),
"slash_right": SubResource("Animation_lmw5u"),
"slash_up": SubResource("Animation_r2wk5"),
"walk_down": SubResource("Animation_sa5fr"),
"walk_left": SubResource("Animation_caaoe"),
"walk_right": SubResource("Animation_3lwyy"),
"walk_up": SubResource("Animation_iei0h")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wpvh5"]
animation = &"slash_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i4umr"]
animation = &"slash_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l6e6r"]
animation = &"slash_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t11mp"]
animation = &"slash_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_flkng"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wpvh5")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_i4umr")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_l6e6r")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_t11mp")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ieusm"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2sp2p"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ubkk"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yut61"]
animation = &"death"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8vvb5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ieusm")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_2sp2p")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_3ubkk")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_yut61")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2fgti"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m2qg1"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i7cd2"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8v687"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p55i8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2fgti")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_m2qg1")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_i7cd2")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8v687")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_giqlw"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_po5il"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3cywp"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p4tdu"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_chdmo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_giqlw")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_po5il")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3cywp")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_p4tdu")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ga4vk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kidnh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_75em6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7pcqj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_giu5o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1o7e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cid3n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ua2og"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cutmd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ss6qm"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_u3pgj"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_flkng")
states/Attack/position = Vector2(443, 192)
states/Death/node = SubResource("AnimationNodeBlendSpace2D_8vvb5")
states/Death/position = Vector2(443, 2)
states/End/position = Vector2(774, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_p55i8")
states/Idle/position = Vector2(351, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_chdmo")
states/Walk/position = Vector2(597, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ga4vk"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_kidnh"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_75em6"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_7pcqj"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_giu5o"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_m1o7e"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_cid3n"), "Idle", "Death", SubResource("AnimationNodeStateMachineTransition_ua2og"), "Walk", "Death", SubResource("AnimationNodeStateMachineTransition_cutmd"), "Attack", "Death", SubResource("AnimationNodeStateMachineTransition_ss6qm")]
graph_offset = Vector2(-94, -18)

[sub_resource type="CircleShape2D" id="CircleShape2D_fbj0v"]
radius = 132.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_csw5d"]
radius = 8.0
height = 22.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s48id"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0xbs"]
bg_color = Color(0.910222, 0.038437, 0.175216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mv5f5"]
bg_color = Color(1, 0.850934, 0.83593, 1)

[node name="Swordsman" type="CharacterBody2D" groups=["Monster"]]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -1)
scale = Vector2(-1, 1)
platform_floor_layers = 0
script = ExtResource("1_gbvb6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(-1, 1)
texture = ExtResource("1_5uwlx")
hframes = 6
vframes = 10

[node name="Hitbox" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(-0.499929, -4)
rotation = -3.14159
scale = Vector2(1, -1)
shape = SubResource("RectangleShape2D_c2qug")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lnp46")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_u3pgj")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Death/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0.219608, -0.422222)
parameters/Walk/blend_position = Vector2(0.27451, 0.0666666)

[node name="StateTimer" type="Timer" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" groups=["Monster"]]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_fbj0v")

[node name="AttackPlayerDetector" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPlayerDetector"]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_csw5d")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 5
offset_left = -10.0
offset_top = -23.0
offset_right = 10.0
offset_bottom = -19.0
theme_override_styles/background = SubResource("StyleBoxEmpty_s48id")
theme_override_styles/fill = SubResource("StyleBoxFlat_p0xbs")
fill_mode = 1
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
show_behind_parent = true
layout_mode = 0
offset_right = 20.0
offset_bottom = 4.0
theme_override_styles/fill = SubResource("StyleBoxFlat_mv5f5")
fill_mode = 1
show_percentage = false

[node name="DamageBarTimer" type="Timer" parent="HealthBar/DamageBar"]

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="AttackPlayerDetector" to="." method="_on_attack_player_detector_body_entered"]
[connection signal="body_exited" from="AttackPlayerDetector" to="." method="_on_attack_player_detector_body_exited"]
[connection signal="timeout" from="HealthBar/DamageBar/DamageBarTimer" to="." method="_on_damage_bar_timer_timeout"]
